# py-cpp-bridge

./: .gitignore  Makefile  README.md  cython_processor.pxd  cython_processor.pyx  pyproject.toml  requirements.txt  setup.py  types.hpp
src/: __init__.py
src/common/: cpp_processor.cpp  cpp_processor.hpp  types.hpp
src/cython_processor/: __init__.py  cython_processor.pxd  cython_processor.pyi  cython_processor.pyx
tests/: test.py  typed_example.py
